syntax = "proto3";

message AccountBalance {
  string id = 1;
  float balance = 2;
}