syntax = "proto3";
import "common/report.proto";

option csharp_namespace = "ReportsMicroservice";

package ReportsMicroservice;

service Reports {
  rpc GenerateUserActivityReport (GenerateUserActivityReportRequest) returns (GenerateReportResponse);
  rpc GenerateOverallReport (GenerateOverallReportRequest) returns (GenerateReportResponse);
}

message GenerateUserActivityReportRequest {
  string flowId = 1;
  string userId = 2;
  int64 timestampFrom = 3;
  int64 timestampTo = 4;
  Granularity granularity = 5;
}

message GenerateOverallReportRequest {
  string flowId = 1;
  repeated Aggregation aggregations = 2;
  int64 timestampFrom = 3;
  int64 timestampTo = 4;
  Granularity granularity = 5;
  ReportSubject subject = 6;
}

message GenerateReportResponse {
  string flowId = 1;
  string report = 2;
}