syntax = "proto3";
import "common/transaction.proto";
import "common/report.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "TransactionsReadMicroservice";
package TransactionsMicroservice;

service TransactionsRead {
  rpc Get (GetTransactionsRequest) returns (GetTransactionsResult);
  rpc Filter(FilterTransactionsRequest) returns (GetTransactionsResult);
  rpc AggregateOverall (AggregateOverallRequest) returns (AggregateOverallResponse);
}

message GetTransactionsRequest {
  string flowId = 1;
  repeated string ids = 2;
}

message FilterTransactionsRequest {
  string flowId = 1;
  repeated string recipients = 2;
  repeated string senders = 3;
  repeated string payments = 4;
  repeated string cards = 5;
  google.protobuf.Timestamp timestampFrom = 6;
  google.protobuf.Timestamp timestampTo = 7;
  int32 top = 8;
}

message GetTransactionsResult {
  repeated Transaction transactions = 1;
}